deploy/k8s/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: df-cerebe-backend
spec:
  selector: { app: df-cerebe-backend }
  ports:
    - port: 8787
      targetPort: 8787
