deploy/k8s/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: df-cerebe-frontend
spec:
  selector: { app: df-cerebe-frontend }
  ports:
    - port: 80
      targetPort: 80
